--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <meta charset="utf-8">
     <title>皮皮凛凛姬 | 绫川星凛</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/AyagawaSeirin/homepage@latest/mdui/css/mdui.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/AyagawaSeirin/homepage@latest/assets/css/main.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/AyagawaSeirin/homepage@latest/assets/css/index.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/soxlola/homepage@latest/mdui/css/mdui.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/soxlola/homepage@latest/assets/css/main.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/soxlola/homepage@latest/assets/css/index.css">
     <!-- <link rel="stylesheet" href="/assets/css/detaile.css"> -->
     <link rel="stylesheet" href="https://at.alicdn.com/t/font_1625701_q2422cy34wn.css">
-    <link rel="icon" href="https://cdn.jsdelivr.net/gh/AyagawaSeirin/homepage@latest/assets/img/logo-circul-100.png">
+    <link rel="icon" href="https://cdn.jsdelivr.net/gh/soxlola/homepage@latest/assets/img/logo-circul-100.png">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162013750-5"></script>
     <script>
